[gd_scene load_steps=7 format=3 uid="uid://h3dsp3ajvmbl"]

[ext_resource type="Script" path="res://Modules/Power Generator/PowerGenerator.gd" id="1_fuxgs"]
[ext_resource type="Texture2D" uid="uid://cvanldoh0sp61" path="res://Art Assets/PowerSource.png" id="1_pqvnn"]
[ext_resource type="Texture2D" uid="uid://dojcy1sivh3g8" path="res://Art Assets/CosmicLegacy_PetricakeGamesPNG.png" id="2_52ti0"]
[ext_resource type="PackedScene" uid="uid://dlfqkisvchfoa" path="res://Modules/HurtAndHitboxes/Hurtbox.tscn" id="4_rp21i"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kgv0y"]
radius = 31.0
height = 98.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n8x4i"]
radius = 31.0
height = 98.0

[node name="PowerGenerator" type="StaticBody2D"]
script = ExtResource("1_fuxgs")

[node name="PowerGeneratorImage" type="Node2D" parent="."]

[node name="PowerSource1" type="Sprite2D" parent="PowerGeneratorImage"]
texture = ExtResource("1_pqvnn")
offset = Vector2(-40, 0)

[node name="PowerSource2" type="Sprite2D" parent="PowerGeneratorImage"]
texture = ExtResource("1_pqvnn")
offset = Vector2(-24, 0)

[node name="PowerSource3" type="Sprite2D" parent="PowerGeneratorImage"]
texture = ExtResource("1_pqvnn")
offset = Vector2(-8, 0)

[node name="PowerSource4" type="Sprite2D" parent="PowerGeneratorImage"]
texture = ExtResource("1_pqvnn")
offset = Vector2(8, 0)
flip_h = true

[node name="PowerSource5" type="Sprite2D" parent="PowerGeneratorImage"]
texture = ExtResource("1_pqvnn")
offset = Vector2(24, 0)
flip_h = true

[node name="PowerSource6" type="Sprite2D" parent="PowerGeneratorImage"]
texture = ExtResource("1_pqvnn")
offset = Vector2(40, 0)
flip_h = true

[node name="PowerBase1" type="Sprite2D" parent="PowerGeneratorImage"]
texture = ExtResource("2_52ti0")
offset = Vector2(-40, 21)
hframes = 17
vframes = 8
frame = 68

[node name="PowerBase2" type="Sprite2D" parent="PowerGeneratorImage"]
texture = ExtResource("2_52ti0")
offset = Vector2(-24, 21)
hframes = 17
vframes = 8
frame = 68

[node name="PowerBase3" type="Sprite2D" parent="PowerGeneratorImage"]
texture = ExtResource("2_52ti0")
offset = Vector2(-8, 21)
hframes = 17
vframes = 8
frame = 68

[node name="PowerBase4" type="Sprite2D" parent="PowerGeneratorImage"]
texture = ExtResource("2_52ti0")
offset = Vector2(8, 21)
flip_h = true
hframes = 17
vframes = 8
frame = 68

[node name="PowerBase5" type="Sprite2D" parent="PowerGeneratorImage"]
texture = ExtResource("2_52ti0")
offset = Vector2(24, 21)
flip_h = true
hframes = 17
vframes = 8
frame = 68

[node name="PowerBase6" type="Sprite2D" parent="PowerGeneratorImage"]
texture = ExtResource("2_52ti0")
offset = Vector2(40, 21)
flip_h = true
hframes = 17
vframes = 8
frame = 68

[node name="PowerPipe1" type="Sprite2D" parent="PowerGeneratorImage"]
texture = ExtResource("2_52ti0")
offset = Vector2(-32, -24)
flip_v = true
hframes = 17
vframes = 8
frame = 63

[node name="PowerPipe2" type="Sprite2D" parent="PowerGeneratorImage"]
texture = ExtResource("2_52ti0")
offset = Vector2(-16, -24)
flip_v = true
hframes = 17
vframes = 8
frame = 45

[node name="PowerPipe3" type="Sprite2D" parent="PowerGeneratorImage"]
rotation = -1.5708
texture = ExtResource("2_52ti0")
offset = Vector2(24, 0)
flip_v = true
hframes = 17
vframes = 8
frame = 45

[node name="PowerPipe4" type="Sprite2D" parent="PowerGeneratorImage"]
texture = ExtResource("2_52ti0")
offset = Vector2(16, -24)
flip_v = true
hframes = 17
vframes = 8
frame = 45

[node name="PowerPipe5" type="Sprite2D" parent="PowerGeneratorImage"]
texture = ExtResource("2_52ti0")
offset = Vector2(32, -24)
flip_h = true
flip_v = true
hframes = 17
vframes = 8
frame = 63

[node name="PowerTip1" type="Sprite2D" parent="PowerGeneratorImage"]
texture = ExtResource("2_52ti0")
offset = Vector2(0, -40)
flip_v = true
hframes = 17
vframes = 8
frame = 10

[node name="PowerTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_kgv0y")

[node name="Hurtbox" parent="." instance=ExtResource("4_rp21i")]

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(0, -1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_n8x4i")

[node name="NavigationObstacle2D" type="NavigationObstacle2D" parent="."]
vertices = PackedVector2Array(-50, -32, -48, 26, 47, 27, 45, -32)

[connection signal="timeout" from="PowerTimer" to="." method="_on_power_timer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_hurtbox_invincibility_started"]

[editable path="Hurtbox"]
